BitcoinTrader: Styling
git-svn-id: http://bitcointrader.googlecode.com/svn/Code/Privat/Android/BitcoinTrader/BitcoinTrader@28 46fdfbd1-27fd-a4d1-f970-16196c59cddc